p2p-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"p2p","namespace":"default"},"spec":{"selector":{"matchLabels":{"app":"p2p"}},"template":{"metadata":{"labels":{"app":"p2p"}},"spec":{"containers":[{"image":"azadpk8szzude4p8avxl.azurecr.io/p2p:latest","name":"p2p","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2022-01-14T08:20:56Z"
  generation: 2
  name: p2p
  namespace: default
  resourceVersion: "155276204"
  uid: 8c193381-3339-45b0-a416-54d196afcfc0
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: p2p
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: p2p
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: localapp
          persistentVolumeClaim:
            claimName: azure-localapp-disk
      containers:
      - image: azadpk8szzude4p8avxl.azurecr.io/p2p:2
        imagePullPolicy: Always
        name: p2p
        volumeMounts:
          - mountPath: "/mnt/z/LocalApp/ER/"
            name: localapp
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-05-28T06:23:53Z"
    lastUpdateTime: "2022-05-28T06:23:53Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-01-14T08:20:56Z"
    lastUpdateTime: "2022-06-03T06:05:09Z"
    message: ReplicaSet "p2p-69978bf99b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
