p2p-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2p-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: nginx
    nginx.z.kubernetes.io/ssl-redirect: "false"
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: p2p.fin-preprd.we1.azure.aztec.cloud.allianz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: p2p
            port:
              number: 8080
